# stoneforge

./: .buildinfo  .gitignore  CHANGELOG.txt  LICENSE  README.md  Regularized_Acoustic_Inversion.ipynb  gaussian_naive_bayes_settings.json  genindex.html  index.html  linear_regression_simple_settings.json  lithology_generator.py  objects.inv  package-lock.json  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  stoneforge_unittest.py  test_carbonate.py
.doctrees/: environment.pickle  index.doctree
.doctrees/modules/: machinelearning.doctree  petrophysics.doctree  preprocessing.doctree  pseudowells.doctree  rockphysics.doctree  tvdss.doctree
.doctrees/usage/: installation.doctree  quickstart.doctree
.github/workflows/: CI.yml  docs.yml  environment.yml  main-merge-protection.yml  (+2 more)
_modules/: index.html
_sources/: index.rst.txt
codes/: __init__.py
datasets/: DP1.las  ES1.las  WD1.las  data_info.txt
docs/: DOCS.md  Makefile  conf.py  index.rst  make.bat  petrophysics2.rst.disable  refs.bib
examples/: 7-MP-22-BA.las  _dlis_data_access_dlisio.ipynb  _dlis_data_management.ipynb  _las3_data_access.ipynb  _las_2_data_access.ipynb  _las_3_data_access.ipynb  _las_data_access.ipynb  _tab_data_access.ipynb  _test_merge_data.ipynb  basic_flow.py  caruacu_turbidites.ipynb  data_loading.ipynb  data_loading.py  data_management.ipynb  dlis_data_access_dlisio.ipynb  in_depth_regression.ipynb  las2.py  lithology_plot.ipynb  load_data.ipynb  loading_las_data.ipynb  log_export.ipynb  ml_regression.ipynb  multivariate_montecarlo.ipynb  nmr.basic_flow.py  petrophysics.ipynb  porosity.py  pseudo_wells.ipynb  shale_volume.py  testing_petrophysics.py  water_saturation.py
modules/: machinelearning.html  petrophysics.html  preprocessing.html  pseudowells.html  rockphysics.html  tvdss.html
petrophysics/: porosity.py  shale_volume.py  water_saturation.py
rock_physics/: conversion_tests.ipynb  gassmann.py  log_unit_converter.py  rock_physics.txt  routinas_poco.py
stoneforge/: Regularized_Acoustic_Reflectivity_Inversion.ipynb  __init__.py
usage/: installation.html  quickstart.html
(+341 files in other folders)
